--- a/WebErp/Dinp02001/Dinp02001.html
+++ b/WebErp/Dinp02001/Dinp02001.html
@@ -534,7 +534,7 @@
                         </td>
                         <td colspan="9">
                             <span class="key-value-inputs">
-                                <input type="text" v-on:change="OnPcodeChange(Inf20aItem.inf20a04_pcode)" v-model="Inf20aItem.inf20a04_pcode"/>
+                                <input type="text" v-on:change="OnPcodeChange(Inf20aItem.inf20a04_pcode)" v-model="Inf20aItem.inf20a04_pcode" style="width:100px"/>
                                 <input type="text" disabled="disabled" v-model="Inf20aItem.inf20a38_product_name"/>
                                 <button type="button" class="btn btn-default btn-xs" v-on:click="ShowDpCodeWindow">
                                     <i class="fa fa-search"></i>
