--- a/WebErp/Dsap02101/Dsap02101.html
+++ b/WebErp/Dsap02101/Dsap02101.html
@@ -66,7 +66,7 @@
                         <!--<vue-datetimepicker placeholder="" v-model="Filter.OrderDate_End" v-bind:value="Filter.OrderDate_End"></vue-datetimepicker> -->
                     </td>
                     <td>
-                        商品編號
+                        商品編號jjjjjjjjjjjjjjjjjjjjj
                         <span>起~</span>
                     </td>
                     <td>
